--- a/src/app.html
+++ b/src/app.html
@@ -11,5 +11,15 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+
+		<style>
+			:root {
+				--surface: #121212;
+				--secondary-surface: #292929;
+				--accent: #6666FF;
+				--text: #f8f8f8;
+				--secondary-text: #dfdfdf;
+			}
+		</style>
 	</body>
 </html>
