--- a/src/app.html
+++ b/src/app.html
@@ -19,6 +19,13 @@
 				--accent: #6666FF;
 				--text: #f8f8f8;
 				--secondary-text: #dfdfdf;
+				--radius: 15px;
+			}
+
+			* {
+				margin: 0;
+				padding: 0;
+				color: var(--text);
 			}
 		</style>
 	</body>
